[tool.poetry]
name = "pycounts"
version = "0.1.0"
description = "count words"
authors = ["pzx"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
